--- a/FluentValidationSamples/FluentValidationSamples/FluentValidationSamples.csproj
+++ b/FluentValidationSamples/FluentValidationSamples/FluentValidationSamples.csproj
@@ -35,6 +35,18 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Autofac, Version=3.3.0.0, Culture=neutral, PublicKeyToken=17863af14b0044da, processorArchitecture=MSIL">
+      <HintPath>..\packages\Autofac.3.3.1\lib\net40\Autofac.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Autofac.Extras.DynamicProxy2, Version=3.0.0.0, Culture=neutral, PublicKeyToken=17863af14b0044da, processorArchitecture=MSIL">
+      <HintPath>..\packages\Autofac.Extras.DynamicProxy2.3.0.7\lib\net40\Autofac.Extras.DynamicProxy2.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Castle.Core, Version=3.2.0.0, Culture=neutral, PublicKeyToken=407dd0808d44fbdc, processorArchitecture=MSIL">
+      <HintPath>..\packages\Castle.Core.3.2.2\lib\net45\Castle.Core.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="FluentValidation, Version=6.2.1.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\FluentValidation.6.2.1.0\lib\Net45\FluentValidation.dll</HintPath>
       <Private>True</Private>
@@ -54,18 +66,20 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="AutoConfig.cs" />
+    <Compile Include="IgnoreInterceptionAttribute.cs" />
     <Compile Include="IOrderService.cs" />
     <Compile Include="Order.cs" />
     <Compile Include="OrderCreatingResult.cs" />
     <Compile Include="OrderDataAccess.cs" />
     <Compile Include="OrderDeletingResult.cs" />
     <Compile Include="OrderService.cs" />
-    <Compile Include="OrderServiceWithValidation.cs" />
-    <Compile Include="OrderServiceWrapper.cs" />
     <Compile Include="OrderValidator.cs" />
     <Compile Include="ServiceResult.cs" />
     <Compile Include="UnitTest1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ValidationInterceptor.cs" />
+    <Compile Include="ValidatorFactory.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
